# WordListeXplorer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: User-Guide.md
scripts/: installer.sh  uninstaller.sh
wlx/: main.py
wlx/core/: config.py  db.py  scanner.py  search.py  variables.py
wlx/ui/: display.py
