[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WordListeXplorer-WLX"
version = "1.0.0"
description = "A local wordlist intelligence CLI tool for offensive security workflows"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Farzan Nobi" }
]

license = { file = "LICENSE" }

keywords = [
    "cybersecurity",
    "wordlists",
    "fuzzing",
    "pentesting",
    "Bug-Bounty",
    "security-tools"
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security",
    "Topic :: Utilities"
]

[project.scripts]
wlx = "wlx.main:app"

[project.urls]
Homepage = "https://github.com/ZeroPrime9"
Repository = "https://github.com/ZeroPrime9/WordListeXplorer"
